// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinearProgress render correctly 1`] = `
<div>
  <div
    class="linearProgressContainer"
    data-testid="linear-progress"
  >
    <div
      class="MuiLinearProgress-root MuiLinearProgress-colorPrimary linearProgress MuiLinearProgress-determinate"
      role="progressbar"
    >
      <div
        class="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate"
      />
    </div>
    <div
      class="linearProgressLabel"
    >
      <p
        class="MuiTypography-root Typography-root-1 Typography-body3-2 MuiTypography-body2"
        data-testid="typography"
      >
        10 / 30
      </p>
    </div>
  </div>
</div>
`;

exports[`LinearProgress render correctly with custom LinearProgress Props 1`] = `
<div>
  <div
    class="linearProgressContainer"
    data-testid="linear-progress"
  >
    <div
      class="MuiLinearProgress-root MuiLinearProgress-colorPrimary linearProgress MuiLinearProgress-determinate"
      role="progressbar"
    >
      <div
        class="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate"
      />
    </div>
    <div
      class="linearProgressLabel"
    >
      <p
        class="MuiTypography-root Typography-root-9 Typography-body3-10 MuiTypography-body2"
        data-testid="typography"
      >
        10 / 30
      </p>
    </div>
  </div>
</div>
`;
